import { createTestClient } from 'apollo-server-testing';

import { server } from 'handler';
import db from 'lib/db';
import Bugsnag from 'lib/bugsnag';

jest.mock('lib/bugsnag');
jest.mock('lib/db');

describe('Query: properties', () => {
  let query;

  beforeEach(() => {
    const utils = createTestClient(server);
    query = utils.query;
  });

  afterEach(jest.resetAllMocks);

  test('successfully retrieves property summary.count data', async () => {
    db.query.mockReturnValueOnce([{ count: 120 }]);

    const response = await query({
      query: `
        {
          properties {
            summary {
              count
            }
          }
        }
      `,
    });

    expect(response).toMatchSnapshot();
  });

  test('returns 0 count when no properties are found', async () => {
    db.query.mockReturnValueOnce([]);

    const response = await query({
      query: `
        {
          properties {
            summary {
              count
            }
          }
        }
      `,
    });

    expect(response).toMatchSnapshot();
  });

  test('successfully retrieves property summary.price data', async () => {
    db.query.mockReturnValueOnce([{ price: 100 }, { price: 200 }]);

    const response = await query({
      query: `
        {
          properties {
            summary {
              price {
                count
                min
                max
                mean
                median
                mode
                standardDev
              }
            }
          }
        }
      `,
    });

    expect(response).toMatchSnapshot();
  });

  test('successfully retrieves truncated property summary.price data', async () => {
    db.query.mockReturnValueOnce([
      { price: 400 },
      { price: 200 },
      { price: 100 },
      { price: 300 },
    ]);

    const response = await query({
      query: `
        {
          properties {
            summary {
              price(discard: 0.5) {
                count
                min
                max
                mean
                median
                mode
                standardDev
              }
            }
          }
        }
      `,
    });

    expect(response).toMatchSnapshot();
  });

  // @todo: passing headers to integration tests is currently not possible..
  // @see https://github.com/apollographql/apollo-server/issues/2277
  xtest('successfully retrieves results', async () => {
    db.query.mockReturnValueOnce([{ id: 1 }, { id: 2 }]);

    const response = await query({
      query: `
        {
          properties {
            results {
              id
            }
          }
        }
      `,
    });

    expect(response).toMatchSnapshot();
  });

  test.each([
    { filter: { published_at: { gte: 'value' } } }, // simply wrong value
    { filter: { published_at: '2019-01-01' } }, // missing filter expression
  ])(
    'throws a validation error when trying to retrieve summary.count',
    async (input) => {
      db.query.mockReturnValueOnce([{ count: 120 }]);

      const response = await query({
        query: `
        query GetCount($filter: PropertyFilter) {
          properties(filter: $filter) {
            summary {
              count
            }
          }
        }
      `,
        variables: input,
      });

      expect(Bugsnag.notify).not.toBeCalled();
      expect(response.errors).toHaveLength(1);
    },
  );

  test('property handles internal errors', async () => {
    db.query.mockImplementation(() => {
      throw new Error('Database issues');
    });

    const response = await query({
      query: `
        query GetCount($filter: PropertyFilter) {
          properties(filter: $filter) {
            summary {
              count
            }
          }
        }
      `,
      variables: { gte: '2019-01-01' },
    });

    expect(Bugsnag.notify).toBeCalled();
    expect(response).toMatchSnapshot();
  });

  test('throws an authentication error if trying to retrieve results without authorizing', async () => {
    db.query.mockReturnValueOnce([{ id: 1 }, { id: 2 }]);

    const response = await query({
      query: `
        {
          properties {
            results {
              id
            }
          }
        }
      `,
    });

    expect(Bugsnag.notify).not.toBeCalled();
    expect(response.errors).toEqual([
      expect.objectContaining({
        extensions: {
          code: 'UNAUTHENTICATED',
        },
      }),
    ]);
  });
});
